adds the issued and expires at to the token repsonse
