# src/v1/openapi.yaml
@@ -952,6 +952,10 @@ paths:
                         properties:
                            token:
                               type: string
+                           expiresAt:
+                              type: number
+                           issuedAt:
+                              type: number
             '400':
                $ref: '#/components/responses/BadRequest'
             '500':
